[package]
name = "securechat"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsa"
path = "src/rsa.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
md5 = "0.7.0"
num-bigint = {version = "0.4.5", features = ["rand"]}
num-iter = "0.1.45"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = {version = "1.37.0", features = ["net", "io-util", "io-std", "macros", "rt-multi-thread"]}
